# stellar-NFT-mint

./: .env
stellar-nft-backend/: .env  package-lock.json  package.json  server.js
stellar-nft-frontend/: package-lock.json  package.json
stellar-nft-frontend/src/: App.css  App.js  MintNFT.css  MintNFT.js  WalletConnect.js
stellar_nft/: Cargo.toml
stellar_nft/src/: lib.rs
